--- a/package.json
+++ b/package.json
@@ -2,12 +2,15 @@
   "name": "scheduler",
   "version": "0.1.0",
   "private": true,
+  "proxy": "http://localhost:8001",
   "dependencies": {
+    "axios": "^0.27.2",
     "classnames": "^2.2.6",
     "fsevents": "^2.3.2",
     "normalize.css": "^8.0.1",
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
+    "react-hooks-testing-library": "^0.6.0",
     "react-scripts": "3.0.0"
   },
   "scripts": {
@@ -40,7 +43,8 @@
     "@testing-library/jest-dom": "^4.0.0",
     "@testing-library/react": "^8.0.7",
     "babel-loader": "^8.0.5",
-    "node-sass": "^4.14.0"
+    "node-sass": "^4.14.0",
+    "react-test-renderer": "^16.9.0"
   },
   "jest": {
     "watchPathIgnorePatterns": [
